# dvs_localization

./: .gitignore  README.md
calibration/data/: dist.txt  matrix.txt
calibration/src/: blink_dots.py  calibrate.ipynb  calibrate.py
calibration/src/.ipynb_checkpoints/: blink_dots-checkpoint.py  calibrate-checkpoint.py
dvs_vlc_ros/: CMakeLists.txt  README.md  package.xml
dvs_vlc_ros/cfg/: markers.txt
dvs_vlc_ros/include/dvs_vlc_ros/: dvs_vlc_ros.hpp
dvs_vlc_ros/launch/: dvs_vlc.launch
dvs_vlc_ros/src/: dvs_vlc_node.cpp  dvs_vlc_node.py  dvs_vlc_ros.cpp  generate_path.py
localization/cfg/: config.json
localization/data/ceres_input/: calibration.txt  initial.txt  markers.txt
localization/src/: demo.ipynb  localization.ipynb  localize.py  record.launch  recorder.py
localization/src/.ipynb_checkpoints/: demo-checkpoint.ipynb  localization-checkpoint.ipynb  localize-checkpoint.py
localization/src/ceres_optim/: CMakeLists.txt  localize.cpp
vlc/src/: detector.py  encoder.py  locate_led.ipynb  vlc.ipynb
