<?xml version="1.0"?>
<package>
  <name>dvs_vlc_ros</name>
  <version>0.0.1</version>
  <description>DVS vlc localization</description>

  <maintainer email="koji.m.minoda@gmail.com">Koji Minoda</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dvs_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>dvs_msgs</run_depend>

</package>
